--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  sqflite: ^2.0.0
+  showcaseview: ^5.0.1
   hive:
   hive_flutter:
   shared_preferences: ^2.2.2
